# nx-plugins

./: .eslintrc.json  .gitignore  .prettierrc  README.md  nx.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json
.cache/pypoetry/artifacts/03/7f/d9/dec059ad0aad4e47549a48c9a3a7294be2a52e5e1b144ac265b98e7791/: pytest_sugar-0.9.7-py2.py3-none-any.whl
.cache/pypoetry/artifacts/22/3f/82/c84a6f6ee81d0623b36b82388194785f9c8a60998ba3560f1696250a16/: pytest_metadata-3.0.0-py3-none-any.whl
.cache/pypoetry/artifacts/72/d5/73/3c0abbbe7eec91f3454f8507363154595c0ffcae714fcc3191af79511b/: pytest_cov-4.1.0-py3-none-any.whl
.cache/pypoetry/artifacts/8a/ac/8b/447df83a32a6711fc2845ca600cdaa8798471c8dc3df880ef1fc804070/: pytest-7.3.1-py3-none-any.whl
.cache/pypoetry/artifacts/bd/bf/04/936c55c22db295cd0b297a51597247c11a638de9d0c38564db121feeac/: pytest_html-3.2.0-py3-none-any.whl
apps/proj/: README.md  project.json  pyproject.toml
apps/proj/proj/: hello.py
apps/proj/tests/: test_hello.py
libs/b/: README.md  project.json  pyproject.toml
libs/better-logger/: README.md  project.json  pyproject.toml
libs/better-logger/better_logger/: main.py
libs/c/: README.md  project.json  pyproject.toml
libs/d/: README.md  project.json  pyproject.toml
libs/e/: README.md  project.json  pyproject.toml
libs/l-a/: README.md  project.json  pyproject.toml
libs/l-a/l_a/: hello.py
libs/l-b/: README.md  project.json  pyproject.toml
libs/l-c/: README.md  project.json  pyproject.toml
libs/lib/: README.md  project.json  pyproject.toml
libs/lib-1/: README.md  project.json  pyproject.toml
libs/lib-1/lib_1/: utils.py
libs/lib-a/: README.md  project.json  pyproject.toml
libs/lib/lib/: hello.py
libs/lib/tests/: test_hello.py
libs/nx-python/: .eslintrc.json  executors.json  generators.json  migrations.json  package.json  project.json  tsconfig.lib.json
libs/nx-python/src/: index.ts
libs/nx-python/src/dependency/: update-dependency.ts
libs/nx-python/src/executors/add/: executor.ts  schema.d.ts  schema.json
libs/nx-python/src/executors/black/: executor.ts  schema.d.ts  schema.json
libs/nx-python/src/executors/dev/: executor.ts  schema.d.ts  schema.json
libs/nx-python/src/executors/flake8/: executor.ts
libs/nx-python/src/executors/install/: executor.ts  schema.d.ts  schema.json
libs/nx-python/src/executors/lock/: executor.ts  schema.d.ts  schema.json
libs/nx-python/src/executors/prune/: executor.ts  schema.d.ts  schema.json
libs/nx-python/src/executors/pylint/: executor.ts  schema.d.ts  schema.json
libs/nx-python/src/executors/pyright/: executor.ts  schema.d.ts
libs/nx-python/src/executors/pytest/: executor.ts  schema.d.ts  schema.json
libs/nx-python/src/executors/remove/: executor.ts  schema.d.ts  schema.json
libs/nx-python/src/executors/run-commands/: executor.ts
libs/nx-python/src/executors/update/: executor.ts  schema.d.ts  schema.json
libs/nx-python/src/executors/utils/: poetry.ts
libs/nx-python/src/generators/fastapi-project/: generator.ts  schema.d.ts  schema.json
libs/nx-python/src/generators/fastapi-project/files/: Dockerfile  README.md  pyproject.toml
libs/nx-python/src/generators/fastapi-project/files/base/: README.md  pyproject.toml
libs/nx-python/src/generators/fastapi-project/files/base/__moduleName__/: main.py
libs/nx-python/src/generators/fastapi-project/files/docker/: Dockerfile
libs/nx-python/src/generators/grpc-project/: generator.ts  schema.d.ts  schema.json
libs/nx-python/src/generators/grpc-project/files/base/: README.md  pyproject.toml
libs/nx-python/src/generators/grpc-project/files/base/__moduleName__/: main.py
libs/nx-python/src/generators/grpc-project/files/docker/: Dockerfile
libs/nx-python/src/generators/migrate-to-shared-venv/: generator.ts  schema.json
libs/nx-python/src/generators/poetry-project/: generator.ts  schema.d.ts  schema.json
libs/nx-python/src/generators/poetry-project/__snapshots__/: generator.spec.ts.snap
libs/nx-python/src/generators/poetry-project/files/: README.md  pyproject.toml
libs/nx-python/src/generators/poetry-project/files/base/: README.md  pyproject.toml
libs/nx-python/src/generators/poetry-project/files/pytest/tests/: test_example.py
libs/nx-python/src/generators/project/: generator.ts
libs/nx-python/src/generators/project/__snapshots__/: generator.spec.ts.snap
libs/nx-python/src/generators/shared-virtual-environment/: generator.ts  schema.d.ts  schema.json
libs/nx-python/src/generators/shared-virtual-environment/files/: pyproject.toml
libs/nx-python/src/graph/: dependency-graph.spec.ts  dependency-graph.ts
libs/nx-python/src/migrations/update-16-1-0/: replace-nx-run-commands.spec.ts  replace-nx-run-commands.ts
libs/nx-python/src/utils/: poetry.ts
libs/random-number/: README.md  project.json  pyproject.toml
libs/random-number/random_number/: main.py
services/a/: README.md  project.json  pyproject.toml
services/app-a/: Dockerfile  README.md  project.json  pyproject.toml
services/app-a/app_a/: main.py
services/s-a/: README.md  project.json  pyproject.toml
services/s-a/s_a/: main.py
services/some-api/: Dockerfile  README.md  project.json  pyproject.toml
services/some-api/some_api/: main.py
services/test-app/: Dockerfile  README.md  project.json  pyproject.toml
services/test-app/test_app/: main.py
services/test-proj/: README.md  project.json  pyproject.toml
tools/: prune_monorepo.py
tools/docker/: logger.py  prune_monorepo.py
tools/graph/: python-dependency-graph.js
tools/plugins/: pythonDependencyGraph.js
tools/python/: prune_monorepo.py
