[tool.poetry]
name = "l-b"
version = "0.0.0"
description = ""
authors = [ ]
readme = 'README.md'
packages = [{include = "l_b"}]

  [tool.poetry.dependencies]
  python = "^3.10"

  [tool.poetry.group.dev.dependencies]
  pylint = "^2.17.5"
  black = "^23.7.0"
  pytest = "^7.4.0"

  [tool.black]
  line-length = 120
  target-version = ["py310"]
  workers = 4
  exclude = "tests"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
