[tool.poetry]
name = "a"
version = "1.0.0"
description = ""
authors = [ ]
readme = "README.md"

  [[tool.poetry.packages]]
  include = "a"

  [tool.poetry.dependencies]
  python = "^3.10"
  fastapi = "^0.101.0"
  pydantic = "^2.1.1"

    [tool.poetry.dependencies.b]
    path = "../../libs/b"
    develop = true

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
black = "^23.7.0"
pytest = "^7.4.0"

[tool.black]
line-length = 120
target-version = [ "py310" ]
workers = 4
exclude = "tests"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
