[tool.poetry]
name = "s-a"
version = "0.0.0"
description = ""
authors = [ ]
readme = "README.md"

  [[tool.poetry.packages]]
  include = "s_a"

  [tool.poetry.dependencies]
  python = "^3.10"
  fastapi = "^0.101.1"
  pymongo = "^4.4.1"
  loguru = "^0.7.0"

    [tool.poetry.dependencies.l-b]
    path = "../../libs/l-b"
    develop = true

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
black = "^23.7.0"
pytest = "^7.4.0"

[tool.black]
line-length = 120
target-version = [ "py310" ]
workers = 4
exclude = "tests"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
