[tool.poetry]
name = "some-api"
version = "0.0.0"
description = ""
authors = [ ]
readme = "README.md"

  [[tool.poetry.packages]]
  include = "some_api"

  [tool.poetry.dependencies]
  python = "^3.10"
  fastapi = "^0.103.1"
  uvicorn = "^0.23.2"

    [tool.poetry.dependencies.random-number]
    path = "../../libs/random-number"
    develop = true

    [tool.poetry.dependencies.better-logger]
    path = "../../libs/better-logger"
    develop = true

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
black = "^23.7.0"
pytest = "^7.4.0"
pyright = "^1.1.325"

[tool.black]
line-length = 120
target-version = [ "py310" ]
workers = 4

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
