[tool.poetry]
name = "test-app"
version = "0.0.0"
description = ""
authors = [ ]
readme = "README.md"

  [[tool.poetry.packages]]
  include = "test_app"

  [tool.poetry.dependencies]
  python = "^3.10"
  fastapi = "^0.103.1"
  uvicorn = "^0.23.2"

    [tool.poetry.dependencies.lib-1]
    path = "../../libs/lib-1"
    develop = true

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
black = "^23.7.0"
pytest = "^7.4.0"
pyright = "^1.1.325"

  [tool.poetry.scripts]
  dev = "test_app.main:start"

[tool.black]
line-length = 120
target-version = [ "py310" ]
workers = 4

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
