[tool.poetry]
name = "<%= projectName %>"
version = "0.0.0"
description = "<%= description %>"
authors = []
readme = 'README.md'
packages = [{ include = "<%= moduleName %>" }]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
